--- a/jan28/question1.html
+++ b/jan28/question1.html
@@ -44,25 +44,12 @@
                 <i class="fas fa-check-circle"></i>
             </div>
             <div class="form-control">
-                <label for="college name enter">college name</label>
+                <label for="college name">enter college name</label>
                 <input type="text" id="college name">
                 <small class="college name" id="error"></small>
                 <i class="fas fa-exclamation-circle"></i>
                 <i class="fas fa-check-circle"></i>
             </div>
         </div>
-        <div class="form-control">
-            <label for="college name enter">college place</label>
-            <input type="text" id="college name">
-        </br>
-            <small class="college name" id="error"></small>
-                <label for="college name enter">college id</label>
-    </br>
-                <input type="text" id="college name">
-                <small class="college name" id="error"></small>
-                    <label for="college name enter">college code</label>
-</br>
-                    <input type="text" id="college name">
-                    <small class="college name" id="error"></small>
 </body>
 </html>
